fix: dark mode quiet background color

--- a/resources/variables.less
+++ b/resources/variables.less
@@ -197,8 +197,8 @@
 @dark-background-color-icon--hover:		rgba( 255, 255, 255, 0.6 );
 @dark-background-color-icon--active:	rgba( 255, 255, 255, 0.2 );
 // @dark-background-color-quiet: 			transparent;
-@dark-background-color-quiet--hover:	rgba( 255, 255, 255, 0.03 );
-@dark-background-color-quiet--active:	rgba( 255, 255, 255, 0.05 );
+@dark-background-color-quiet--hover:	rgba( 255, 255, 255, 0.05 );
+@dark-background-color-quiet--active:	rgba( 255, 255, 255, 0.03 );
 
 @dark-background-color-primary--hover:	@color-accent30;
 @dark-background-color-primary--active:	@color-accent-30--darken;
